--- a/pom.xml
+++ b/pom.xml
@@ -154,8 +154,8 @@
         <hibernate.version>5.1.3.Final</hibernate.version>
         <hibernate.hydrate.version>2.3</hibernate.hydrate.version>
         <!-- Remove once boot updates -->
-        <hazelcast.version>3.7.2</hazelcast.version>
-        <hazelcast.hibernate.version>1.1</hazelcast.hibernate.version>
+        <!--hazelcast.version>3.7.2</hazelcast.version-->
+        <hazelcast.hibernate.version>1.2</hazelcast.hibernate.version>
         <infinispan.version>8.1.0.Final</infinispan.version>
         <itextpdf5.version>5.5.9</itextpdf5.version>
         <java.version>1.8</java.version>
