--- a/pom.xml
+++ b/pom.xml
@@ -202,7 +202,7 @@
         <jstree.bootstrap.theme.version>1.0.1</jstree.bootstrap.theme.version>
         <jetty.version>9.3.6.v20151106</jetty.version>
         <jedis.version>2.9.0</jedis.version>
-        <maven-archetype-plugin.version>3.0.1-NEMESIS-RELEASE</maven-archetype-plugin.version>
+        <maven-archetype-plugin.version>3.0.1</maven-archetype-plugin.version>
         <maven.filtering.version>1.3</maven.filtering.version>
         <maven-war-plugin.version>2.4</maven-war-plugin.version>
         <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
@@ -272,7 +272,7 @@
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <!--spring.cloud.version>Camden.SR3</spring.cloud.version-->
         <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
-        <spring-data-releasetrain.version>Ingalls-RELEASE</spring-data-releasetrain.version>
+        <spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version>
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
