--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Brussels-BUILD-SNAPSHOT</version>
+        <version>Brussels-SR2</version>
         <relativePath/>
     </parent>
 
