--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
         <google-maps-services.version>0.1.17</google-maps-services.version>
         <gridgain.version>6.6.9</gridgain.version>
         <guava.version>19.0</guava.version>
-        <hibernate.version>5.1.3.Final</hibernate.version>
+        <hibernate.version>5.1.5.Final</hibernate.version>
         <hibernate.hydrate.version>2.3</hibernate.hydrate.version>
         <!-- Remove once boot updates -->
         <!--hazelcast.version>3.7.2</hazelcast.version-->
@@ -276,7 +276,7 @@
         <stacktable.webjars.version>1.0.1</stacktable.webjars.version>
         <!--spring.cloud.version>Camden.SR3</spring.cloud.version-->
         <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
-        <spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version>
+        <!--spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version-->
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
