--- a/pom.xml
+++ b/pom.xml
@@ -240,7 +240,7 @@
         <maven-jasmine-plugin.version>1.3.1.5</maven-jasmine-plugin.version>
         <maven-plugin-api.version>3.2.2</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
-        <nemesis.version>1.5.1.BUILD-SNAPSHOT</nemesis.version>
+        <nemesis.version>1.5.1.RELEASE</nemesis.version>
         <opencmis.version>1.0.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
         <oracle.version>12.2.0.1</oracle.version>
@@ -277,7 +277,7 @@
         <stacktable.webjars.version>1.0.1</stacktable.webjars.version>
         <spring.cloud.version>Dalston.RELEASE</spring.cloud.version>
         <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
-        <spring-data-releasetrain.version>Ingalls-BUILD-SNAPSHOT</spring-data-releasetrain.version>
+        <spring-data-releasetrain.version>Ingalls-SR3</spring-data-releasetrain.version>
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
