--- a/pom.xml
+++ b/pom.xml
@@ -1327,6 +1327,11 @@
             </dependency>
             <dependency>
                 <groupId>com.nemesis.platform.module.widget</groupId>
+                <artifactId>nemesis-widget-faq</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module.widget</groupId>
                 <artifactId>nemesis-widget-footer</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
