--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
         <docker.maven.plugin.version>0.4.13</docker.maven.plugin.version>
         <drools.version>6.5.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
+        <!-- Remove when spring-boot upgrades to Elasticsearch 5.4.0 -->
+        <elasticsearch.version>5.4.0</elasticsearch.version>
         <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
         <failsafe.parallel />
         <failsafe.useUnlimitedThreads />
