--- a/pom.xml
+++ b/pom.xml
@@ -1406,20 +1406,10 @@
                 <version>${nemesis.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.nemesis.themes</groupId>
-                <artifactId>nemesis-theme-polarapparel</artifactId>
+                <groupId>com.nemesis.rules</groupId>
+                <artifactId>nemesis-rules-targeting</artifactId>
                 <version>${nemesis.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.nemesis.themes</groupId>
-                <artifactId>nemesis-theme-solarapparel</artifactId>
-                <version>${nemesis.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.nemesis.themes</groupId>
-                <artifactId>nemesis-theme-sagan</artifactId>
-                <version>${nemesis.version}</version>
-            </dependency>
+			</dependency>
             <!-- Test dependencies -->
             <dependency>
                 <groupId>net.jcip</groupId>
