--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
         <compile-testing.version>0.9</compile-testing.version>
         <cybersource.version>6.1.0</cybersource.version>
         <docker.maven.plugin.version>0.4.13</docker.maven.plugin.version>
+        <doxia.version>1.7</doxia.version>
         <drools.version>6.5.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
@@ -1573,6 +1574,7 @@
                         <outputEncoding>UTF-8</outputEncoding>
                         <attributes>
                             <generated>${project.build.directory}/generated-site/asciidoc/</generated>
+                            <session>${session}</session>
                         </attributes>
                         <asciidoc>
                             <requires>
@@ -1586,7 +1588,6 @@
                                 <sectanchors>true</sectanchors>
                                 <last-update-label>false</last-update-label>
                                 <language>asciidoc</language>
-                                <imagesdir>images</imagesdir>
                                 <imagesoutdir>${project.build.directory}/site/images/</imagesoutdir>
                                 <source-highlighter>coderay</source-highlighter>
                                 <coderay-css>style</coderay-css>
@@ -1618,7 +1619,7 @@
                         <dependency>
                             <groupId>org.apache.maven.doxia</groupId>
                             <artifactId>doxia-core</artifactId>
-                            <version>1.7</version>
+                            <version>${doxia.version}</version>
                         </dependency>
                         <dependency>
                             <groupId>org.json</groupId>
@@ -1872,18 +1873,11 @@
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
                 <version>${maven-rat-plugin.version}</version>
-                <!-- xerces is already removed in doxia 1.7, so this exclusion may be removed when doxia 1.7 is released. -->
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.doxia</groupId>
                         <artifactId>doxia-core</artifactId>
-                        <version>1.2</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>xerces</groupId>
-                                <artifactId>xercesImpl</artifactId>
-                            </exclusion>
-                        </exclusions>
+                        <version>${doxia.version}</version>
                     </dependency>
                 </dependencies>
                 <executions>
