Use the JUnitRunListener from the tools project.
We cannot have the JUnitRunListener in the platform-core:test because
then the archetype must depend on platform-core:test which means it will import
test csv files.

--- a/pom.xml
+++ b/pom.xml
@@ -2119,7 +2119,7 @@
                             <properties>
                                 <property>
                                     <name>listener</name>
-                                    <value>com.nemesis.platform.core.listener.NemesisJunitRunListener</value>
+                                    <value>com.nemesis.tools.junitlistener.NemesisJunitRunListener</value>
                                 </property>
                             </properties>
                         </configuration>
