--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,13 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>Brussels-BUILD-SNAPSHOT</version>
+        <version>Brussels-SR3</version>
         <relativePath />
     </parent>
 
     <groupId>com.nemesis</groupId>
     <artifactId>bom</artifactId>
-    <version>1.5.3.BUILD-SNAPSHOT</version>
+    <version>1.5.2.1.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Nemesis BOM</name>
@@ -152,7 +152,7 @@
         <google-maps-services.version>0.1.17</google-maps-services.version>
         <gridgain.version>6.6.9</gridgain.version>
         <guava.version>19.0</guava.version>
-        <hibernate.version>5.1.8.Final</hibernate.version>
+        <hibernate.version>5.1.5.Final</hibernate.version>
         <hibernate.hydrate.version>2.3</hibernate.hydrate.version>
         <!-- Remove once boot updates -->
         <!--hazelcast.version>3.7.2</hazelcast.version-->
@@ -241,7 +241,7 @@
         <maven-jasmine-plugin.version>1.3.1.5</maven-jasmine-plugin.version>
         <maven-plugin-api.version>3.2.2</maven-plugin-api.version>
         <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
-        <nemesis.version>1.5.3.BUILD-SNAPSHOT</nemesis.version>
+        <nemesis.version>1.5.2.1.BUILD-SNAPSHOT</nemesis.version>
         <opencmis.version>1.0.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
         <oracle.version>12.2.0.1</oracle.version>
