--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
         <google-maps-services.version>0.1.17</google-maps-services.version>
+        <gsap-js.version>1.13.1</gsap-js.version>
         <gridgain.version>6.6.9</gridgain.version>
         <guava.version>19.0</guava.version>
         <hibernate.version>5.1.5.Final</hibernate.version>
@@ -577,6 +578,11 @@
                 <groupId>com.riskified</groupId>
                 <artifactId>riskified-sdk</artifactId>
                 <version>${riskified.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>gsap-js</artifactId>
+                <version>${gsap-js.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.gridgain</groupId>
