--- a/pom.xml
+++ b/pom.xml
@@ -280,7 +280,7 @@
         <stacktable.webjars.version>1.0.1</stacktable.webjars.version>
         <spring.cloud.version>Dalston.RELEASE</spring.cloud.version>
         <!--spring-hateoas.version>0.21.0.RELEASE</spring-hateoas.version-->
-        <spring-data-releasetrain.version>Ingalls-SR3</spring-data-releasetrain.version>
+        <!--spring-data-releasetrain.version>Ingalls-SR3</spring-data-releasetrain.version-->
         <!--spring-session.version>1.1.1.RELEASE</spring-session.version-->
         <spring-social-twitter.version>1.1.3.PATCHED-2</spring-social-twitter.version>
         <supercsv.version>2.4.0</supercsv.version>
