--- a/pom.xml
+++ b/pom.xml
@@ -1062,6 +1062,11 @@
             </dependency>
             <dependency>
                 <groupId>com.nemesis.platform</groupId>
+                <artifactId>nemesis-framework</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform</groupId>
                 <artifactId>nemesis-platform-core</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
