--- a/pom.xml
+++ b/pom.xml
@@ -1192,6 +1192,11 @@
             </dependency>
             <dependency>
                 <groupId>com.nemesis.platform.module</groupId>
+                <artifactId>nemesis-module-banking</artifactId>
+                <version>${nemesis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nemesis.platform.module</groupId>
                 <artifactId>nemesis-module-barcode</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
