--- a/pom.xml
+++ b/pom.xml
@@ -129,11 +129,12 @@
         </checkstyle.violation.ignore>
         <codemodel.version>2.8.6</codemodel.version>
         <codemirror.webjars.version>5.1</codemirror.webjars.version>
-        <commons.collections4.version>4.1</commons.collections4.version>
-        <commons.vfs2.version>2.1.1660580.2</commons.vfs2.version>
-        <commons.vfs2.s3.version>2.4.1</commons.vfs2.s3.version>
-        <commons.vfs2.azure.version>1.2.patched</commons.vfs2.azure.version>
-        <commons.jcs.version>2.0-beta-1</commons.jcs.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
+        <commons-vfs2.version>2.1.1660580.2</commons-vfs2.version>
+        <commons-vfs2-s3.version>2.4.1</commons-vfs2-s3.version>
+        <commons-vfs2-azure.version>1.2.patched</commons-vfs2-azure.version>
+        <commons-jcs.version>2.0-beta-1</commons-jcs.version>
+        <commons-text.version>1.1</commons-text.version>
         <compile-testing.version>0.9</compile-testing.version>
         <cybersource.version>6.1.0</cybersource.version>
         <docker.maven.plugin.version>0.4.13</docker.maven.plugin.version>
@@ -500,33 +501,38 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commons-text.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
-                <version>${commons.collections4.version}</version>
+                <version>${commons-collections4.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-vfs2</artifactId>
-                <version>${commons.vfs2.version}</version>
+                <version>${commons-vfs2.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github</groupId>
                 <artifactId>vfs-s3</artifactId>
-                <version>${commons.vfs2.s3.version}</version>
+                <version>${commons-vfs2-s3.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.sludev.commons</groupId>
                 <artifactId>vfs-azure</artifactId>
-                <version>${commons.vfs2.azure.version}</version>
+                <version>${commons-vfs2-azure.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-jcs-core</artifactId>
-                <version>${commons.jcs.version}</version>
+                <version>${commons-jcs.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-jcs-jcache</artifactId>
-                <version>${commons.jcs.version}</version>
+                <version>${commons-jcs.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
@@ -1842,7 +1848,7 @@
                     <fixFieldComment>false</fixFieldComment>
                     <defaultAuthor>Petar Tahchiev</defaultAuthor>
                     <defaultSince>0.6</defaultSince>
-                    <excludes>**/*Impl.java,**/Default**.java,**/**Config.java,**/**Dto.java</excludes>
+                    <excludes>**/*Impl.java,**/Default**.java,**/**Configuration.java,**/**Dto.java</excludes>
                 </configuration>
             </plugin>
             <plugin>
