--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
         <!--infinispan.version>8.1.0.Final</infinispan.version-->
         <java.version>1.8</java.version>
         <javamoney.version>1.1</javamoney.version>
-        <jackson-datatype-money.version>1.0.0.NEMESIS-RELEASE</jackson-datatype-money.version>
+        <jackson-datatype-money.version>1.0.0</jackson-datatype-money.version>
         <money-validation.version>1.2.0</money-validation.version>
         <javauom.version>1.0</javauom.version>
         <javauom-ri.version>1.0</javauom-ri.version>
